--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
     "test": " "
     
   },
+
+  "engines": {
+    "node": ">=11.0.0",
+    "npm": ">=6.4.0"
+  },
+  
   "author": "",
   "license": "ISC",
   "dependencies": {
