--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": " "
   },
   "engines": {
-    "node": ">=11.0.0",
-    "npm": ">=6.4.0"
+    "node": "10.16.3",
+    "npm": "6.9.x"
   },
   "author": "",
   "license": "ISC",
