init  Changes to be committed: 	modified:   package.json  Changes not staged for commit: 	modified:   AngularApp (modified content, untracked content)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": " "
+    "start": "node index.js",
+    "build": "ng build",
+    "heroku-postbuild": "ng build --prod"
   },
   "engines": {
     "node": "10.16.3",
